# msp_genomes

./: MANIFEST.in  pyproject.toml
src/msp_genomes/: __main__.py
src/msp_genomes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/msp_genomes/databases/: filtered_collections.xlsx
src/msp_genomes/databases/disinfinder_db/: INSTALL.py  README.md
src/msp_genomes/databases/mlst_db/: config  dbases.xml
src/msp_genomes/databases/mlst_db/abaumannii/: abaumannii.fsa  abaumannii.tsv
src/msp_genomes/databases/mlst_db/abaumannii_2/: abaumannii_2.fsa  abaumannii_2.tsv
src/msp_genomes/databases/mlst_db/achromobacter/: achromobacter.fsa  achromobacter.tsv
src/msp_genomes/databases/mlst_db/aeromonas/: aeromonas.fsa  aeromonas.tsv
src/msp_genomes/databases/mlst_db/bcepacia/: bcepacia.fsa  bcepacia.tsv
src/msp_genomes/databases/mlst_db/bcereus/: bcereus.fsa  bcereus.tsv
src/msp_genomes/databases/mlst_db/bfragilis/: bfragilis.fsa
src/msp_genomes/databases/resfinder_db/: all.fsa  history.txt
src/msp_genomes/find_all/: run_find_all.py
src/msp_genomes/find_mge/: run_mge_finder.py
src/msp_genomes/find_plasmids/: compile_plasmidfinder_results.py  plasmidfinder.py  run_plasmidfinder.py  run_plasmidfinder_msp.py
src/msp_genomes/find_resistances/: compile_resfinder_results.py  run_resfinder.py
src/msp_genomes/find_st/: mlst.py  run_mlst.py
src/msp_genomes/find_virulence/: run_virulencefinder.py
src/msp_genomes/utils/: config.py  consolidate_compilations.py  get_cli.py  miscellaneous.py
(+625 files in other folders)
